# xenocara

./: 3RDPARTY  MODULES  Makefile  README  README.md
app/appres/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  appres.c  appres.man  configure  configure.ac  meson.build
app/appres/man/: Makefile.am  Makefile.in  appres.man
app/bdftopcf/: ChangeLog  Makefile.am  Makefile.bsd-wrapper  Makefile.in  README.md  aclocal.m4  atom.c  bdfint.h  bdfread.c  bdftopcf.c  bdfutils.c  bitmap.c  bitmap.h  bitmaputil.c  bufio.c  bufio.h  configure  configure.ac  defaults.c  fileio.c  filewr.c  fntfil.h  fntfilio.h  fntfilst.h  font.h  fontaccel.c  fontink.c  fontmisc.h  fontutil.h  fontxlfd.h  pcf.h  pcfwrite.c  private.c  utilbitmap.c
app/bdftopcf/man/: Makefile.in
app/bitmap/: AUTHORS  BitEdit.c  Bitmap-color.ad  Bitmap-nocase.ad  Bitmap.ad  Bitmap.c  Bitmap.h  BitmapP.h  ChangeLog  CutPaste.c  Dialog.c  Dialog.h  Graphics.c  Handlers.c  Makefile.am  Makefile.bsd-wrapper  Makefile.in  README  README.md  ReqMach.c  Requests.h  aclocal.m4  atobm.c  autogen.sh  bitmap.icon  bitmap.man  bmtoa.c  compile  config.h.in  configure  configure.ac
app/bitmap/app-defaults/: Bitmap  Bitmap-nocase
app/bitmap/man/: Makefile.am  Makefile.in  bitmap.man  bmtoa.man
app/bitmap/test/: round-trip-test.in
app/editres/: AUTHORS  ChangeLog  Editres-color.ad  INSTALL  Makefile.am  Makefile.in  README  README.md  aclocal.m4  actions.c  comm.c  config.h  config.h.in  configure  configure.ac  editres.c  editres.man  editresP.h  geometry.c  handler.c  meson.build  meson.options  setvalues.c  svpopup.c  utils.c  widgets.c  wtree.c
app/editres/app-defaults/: Editres
app/editres/man/: Makefile.am  Makefile.in  editres.man
app/fonttosfnt/: COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  compile  config.h.in  configure  configure.ac  env.c  fonttosfnt.c  fonttosfnt.h  fonttosfnt.man  read.c  struct.c  util.c  write.c
app/fonttosfnt/man/: Makefile.am  Makefile.in  fonttosfnt.man
app/iceauth/: COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  iceauth.c  iceauth.h  iceauth.man  meson.build  process.c
app/iceauth/man/: Makefile.am  Makefile.in  iceauth.man
app/ico/: COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  allobjs.h  config.h.in  configure  configure.ac  ico.c  ico.man  meson.build  objcube.h  objico.h  objocta.h  objplane.h  objpyr.h  polyinfo.h
app/ico/man/: Makefile.am  Makefile.in  ico.man
app/lbxproxy/: ChangeLog  Makefile.am  Makefile.bsd-wrapper  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  design  lbxproxy.def  lbxproxy.man
app/lbxproxy/config/: AtomControl
app/lbxproxy/di/: atomcache.c  cache.c  cmap.c  cmaputil.c  dispatch.c  extensions.c  gfx.c  globals.c  init.c  lbxfuncs.c  lbxutil.c  main.c  options.c  pm.c  props.c  reqtype.c  resource.c  swaprep.c  swapreq.c  tables.c  tags.c  unsquish.c  utils.c  wire.c  zeropad.c
app/lbxproxy/include/: assert.h  atomcache.h  cache.h  colormap.h  init.h  lbx.h  lbxext.h  misc.h  os.h  pm.h  pmP.h  proxyopts.h  reqtype.h  resource.h  swap.h  tags.h  util.h  (+1 more)
app/listres/: ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  listres.c  listres.man  meson.build
app/luit/: ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  charset.c  charset.h  config.h.in  configure  configure.ac  iso2022.c  iso2022.h  locale.c  luit.c  luit.h  luit.man  other.c  other.h  parser.c  parser.h  sys.c  sys.h
app/mkfontscale/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  hash.c  ident.c  ident.h  list.c  list.h  meson.build  meson.options  mkfontscale.c  mkfontscale.man
app/rgb/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  rgb.c  showrgb.c  showrgb.man
app/rstart/: ChangeLog  Makefile.am  Makefile.bsd-wrapper  Makefile.in  aclocal.m4  auth.c  client.cpp  config.cpp  configure  configure.ac  rstart.man  rstartd.man  server.c  server.os2
app/sessreg/: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  compile  config.h.in  configure  configure.ac  filenames.sed.c  meson.build  sessreg.c  sessreg.h  sessreg.man
app/setxkbmap/: ChangeLog  Makefile.am  Makefile.bsd-wrapper  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  meson.build  meson.options  setxkbmap.c  setxkbmap.man
app/smproxy/: ChangeLog  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  meson.build  save.c  smproxy.c  smproxy.h  smproxy.man
app/twm/: COPYING  ChangeLog  Makefile.am  Makefile.bsd-wrapper  Makefile.in  README  README.md  config.h.in  configure  configure.ac
app/x11perf/: ChangeLog  Makefile.am  Makefile.in  README  README.md  Xmark  Xmark.man  aclocal.m4  bitmaps.c  bitmaps.h  config.h.in  configure  configure.ac  do_arcs.c  do_blt.c  do_complex.c  do_dots.c  do_lines.c  do_movewin.c  do_rects.c  do_segs.c  do_simple.c  do_tests.c  do_text.c  do_traps.c  do_tris.c  do_valgc.c  do_windows.c  perfboth  perfratio  x11pcomp.cpp  x11perf.c  x11perf.h  x11perf.man  x11perfcomp.in  x11perfcomp.man
app/xbiff/: ChangeLog  Mailbox.c  Mailbox.h  MailboxP.h  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  meson.build  meson.options  xbiff.c  xbiff.man
app/xcalc/: ChangeLog  Makefile.am  Makefile.in  XCalc-color.ad  aclocal.m4  actions.c  configure  configure.ac  math.c  meson.build  xcalc.c  xcalc.h
app/xcompmgr/: ChangeLog  Makefile.am  Makefile.bsd-wrapper  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  xcompmgr.1  xcompmgr.c
app/xconsole/: ChangeLog  Makefile.am  Makefile.bsd-wrapper  Makefile.in  README  README.md  aclocal.m4  config.h.in  configure  configure.ac  meson.build  meson.options  privsep.c  xconsole.c  xconsole.h  xconsole.man
(+19295 files in other folders)
